Added interval and unsubsription logic.

--- a/observables/src/app/observables/observables.component.html
+++ b/observables/src/app/observables/observables.component.html
@@ -1,2 +1,6 @@
-Some text
+<h3>Observables Demo</h3>
 <button (click)="create()">Create Observable</button>
+<hr>    
+<button (click)="increment()">Create Interval Observable</button>
+<hr>
+<button (click)="destroy()">Destroy Subscription</button>
