--- a/observables/src/app/app.component.html
+++ b/observables/src/app/app.component.html
@@ -1,1 +1,7 @@
-<o-observables> Loading Observable Demo...</o-observables>
+
+<h4>RxJS-Observables</h4>
+<div class="row">
+    <div class="col-md-6"><o-observables> Loading Observable Demo...</o-observables></div>
+    <div class="col-md-6"><o-subject> Loading Subject Observable Demo...</o-subject></div>
+</div>
+
