Added pipes demo.

--- a/observables/src/app/observables/observables.component.html
+++ b/observables/src/app/observables/observables.component.html
@@ -4,3 +4,9 @@
 <button class="btn btn-primary" (click)="increment()">Create Interval Observable</button>
 <hr>
 <button class="btn btn-primary" (click)="destroy()">Destroy Subscription</button>
+
+<hr>
+<h4>Pipe Demo</h4>
+<div class="row">
+    <div class="col-md-4">{{someText|shortlength}}</div>
+</div>
