Added Heros class/component to demonstrate when/why pipe will not work (due to array reference).

--- a/observables/src/app/app.component.html
+++ b/observables/src/app/app.component.html
@@ -1,7 +1,13 @@
-
-<h4>RxJS-Observables</h4>
+<h4>
+    RxJS-Observables</h4>
 <div class="row">
-    <div class="col-md-6"><o-observables> Loading Observable Demo...</o-observables></div>
-    <div class="col-md-6"><o-subject> Loading Subject Observable Demo...</o-subject></div>
+    <div class="col-md-4">
+        <o-observables> Loading Observable Demo...</o-observables>
+    </div>
+    <div class="col-md-4">
+        <o-subject> Loading Subject Observable Demo...</o-subject>
+    </div>
+    <div class="col-md-4">
+        <o-flying-heros></o-flying-heros>
+    </div>
 </div>
-
