added http service, subject observable data service to demo.

--- a/observables/src/app/app.component.html
+++ b/observables/src/app/app.component.html
@@ -11,3 +11,16 @@
         <o-flying-heros></o-flying-heros>
     </div>
 </div>
+<hr>
+<h4>http Subject Observable Service</h4>
+<div class="row">
+    <div class="col-md-12">
+        <o-subscriber></o-subscriber>
+    </div>
+</div>
+<h4>http Subject Observable Service (2nd) </h4>
+<div class="row">
+    <div class="col-md-12">
+        <o-second-subject-subscriber></o-second-subject-subscriber>
+    </div>
+</div>
