--- a/observables/src/app/app.component.html
+++ b/observables/src/app/app.component.html
@@ -24,3 +24,8 @@
         <o-second-subject-subscriber></o-second-subject-subscriber>
     </div>
 </div>
+
+<hr>
+<div class="row">
+    <div class="col-md-6"><o-async-pipe></o-async-pipe></div>
+</div>
